[gd_scene load_steps=3 format=3 uid="uid://d10mveb7aokfl"]

[ext_resource type="Script" uid="uid://pqqpk0vulaq6" path="res://screen_capture.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://tgwx64g0plcn" path="res://mountains.png" id="2"]

[node name="ScreenCapture" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("2")

[node name="CapturedImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 128.0
offset_top = 75.0
offset_right = -128.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 4

[node name="CaptureButton" type="Button" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 190.0
offset_bottom = 110.0
text = "Capture
Screen"

[connection signal="pressed" from="CaptureButton" to="." method="_on_capture_button_pressed"]
